added a nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <h3>Hello Kujegy aka Chocale</h3>
+    <header>
+      <div>
+        <nav class="navbar">
+          <ul>
+            <a href="#about-me"> About Me</a>
+          </ul>
+          <ul>
+            <a href="#work"> Work</a>
+          </ul>
+          <ul>
+            <a href="contact-form"> Contact Form</a>
+          </ul>
+          <ul>
+            <a href="resume"> Resume</a>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
