added social media links and about-me paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>
+      <h2>Mahamadou Kabba</h2>
       <div>
         <nav class="navbar">
           <ul>
@@ -25,6 +26,40 @@
           </ul>
         </nav>
       </div>
+      <section class="socialmedias">
+        <aside class="linkedin">
+          <a href="https://www.linkedin.com/feed/">
+            <ion-icon name="logo-linkedin"></ion-icon>
+          </a>
+        </aside>
+        <aside class="github">
+          <a href="https://github.com/">
+            <ion-icon name="logo-github"></ion-icon
+          ></a>
+        </aside>
+        <img src="assets/max.JPG" alt="" />
+        <script
+          type="module"
+          src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+        ></script>
+        <script
+          nomodule
+          src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+        ></script>
+      </section>
     </header>
+    <section id="about-me">
+      <h1>Mahamadou Kabba</h1>
+      <h2>Student</h2>
+      <article>
+        I received an Electrical Engineering Associate Degree in Applied Science
+        from Bronx Community College. I'm an aspiring web developer currently
+        attending Columbia Engineering Bootcamp. I was born and raised in The
+        Gambia, West Africa. I started learning English as an adult after I came
+        to the United States. I was honored with the Lewis Carlin Memorial Award
+        upon my graduation from BCC for good academic standing. I like to play
+        soccer, watch soccer games and play video games on my free time.
+      </article>
+    </section>
   </body>
 </html>
