added a contact me form

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <h2>Mahamadou Kabba</h2>
       <div>
+        <!-- navbar here  -->
         <nav class="navbar">
           <ul>
             <a href="#about-me"> About Me</a>
@@ -26,6 +27,7 @@
           </ul>
         </nav>
       </div>
+      <!-- social media links and icons here  -->
       <section class="socialmedias">
         <aside class="linkedin">
           <a href="https://www.linkedin.com/feed/">
@@ -37,7 +39,8 @@
             <ion-icon name="logo-github"></ion-icon
           ></a>
         </aside>
-        <img src="assets/max.JPG" alt="" />
+        <!-- my picture goes here  -->
+        <picture> <img src="assets/max.JPG" alt="" /> </picture>
         <script
           type="module"
           src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -48,6 +51,7 @@
         ></script>
       </section>
     </header>
+    <!-- about me section here  -->
     <section id="about-me">
       <h1>Mahamadou Kabba</h1>
       <h2>Student</h2>
@@ -60,6 +64,16 @@
         upon my graduation from BCC for good academic standing. I like to play
         soccer, watch soccer games and play video games on my free time.
       </article>
+    </section>
+    <!-- contact me form here  -->
+    <section id="contact-form">
+      <form id="myform" action="form">
+        <input type="text" placeholder=" First Name" />
+        <input type="text" placeholder=" Last Name" />
+        <input type="email" placeholder=" Email" />
+        <input type="tell" placeholder=" Phone Numbr" />
+        <button type="button">Send</button>
+      </form>
     </section>
   </body>
 </html>
