styled header and image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="contact-form"> Contact Form</a>
           </ul>
           <ul>
-            <a href="resume"> Resume</a>
+            <a href="assets/Kabba_resume.pdf"> Resume</a>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
     </section>
     <!-- contact me form here  -->
     <section id="contact-form">
-      <form id="myform" action="form">
+      <form id="contact-form" action="form">
         <input type="text" placeholder=" First Name" />
         <input type="text" placeholder=" Last Name" />
         <input type="email" placeholder=" Email" />
@@ -76,6 +76,7 @@
       </form>
     </section>
   </body>
+  <!-- footer aka the end  -->
   <footer id="page-footer">
     <h4>Thanks for stoping by!</h4>
   </footer>
