added github links to REDAme

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <section class="socialmedias">
         <aside class="linkedin">
           <a href="https://www.linkedin.com/feed/">
-            <ion-icon name="logo-linkedin"></ion-icon>
+            <ion-icon size="large" name="logo-linkedin"></ion-icon>
           </a>
         </aside>
         <aside class="github">
           <a href="https://github.com/">
-            <ion-icon name="logo-github"></ion-icon
+            <ion-icon size="large" name="logo-github"></ion-icon
           ></a>
         </aside>
 
