change li's text color to white

--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
           <div class="col-sm">
             <!-- remove the dot from nav bar  -->
             <ul class="list-unstyled" >
-            <li ><a href="#about-me" class="active ">About Me</a></li>
+            <li ><a href="#about-me" class="active text-white ">About Me</a></li>
           </div>
           <div class="col-sm">
             <li>
               <!-- how to add more work  -->
               <a
                 href="file:///Users/mahamadoukabba/Desktop/activity%2022%20git/22-Stu_Mini-Project/index.html"
-                class="active"
+                class="active text-white"
                 >Work</a
               >
             </li>
           </div>
           <div class="col-sm">
             <!-- why contact form not working ? -->
-            <li><a href="#contact-form" class="active">Contact Form</a></li>
+            <li><a href="#contact-form" class="active text-white">Contact Form</a></li>
           </div>
           <div class="col-sm">
             <li>
-              <a href="assets/Kabba_resume.pdf" class="active">Resume</a>
+              <a href="assets/Kabba_resume.pdf" class="active text-white">Resume</a>
             </li>
           </div>
           </ul>
@@ -108,7 +108,7 @@
       
     </section>
     <!-- contact me form here  -->
-    <section id="#contact-form" class="row w-100 d-flex justify-content-center"> 
+    <section id="contact-form" class="row w-100 d-flex justify-content-center"> 
       <div class="col-10 col-md-6 col-lg-5"> 
         <form  class="bg-white rounded my-3 p-3">
           <h3>contact information form!</h3>
