added project-1  to work section

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
       <hr />
       <h2 class="text-white p-4">Mahamadou Kabba</h2>
       <br />
-      <div class="container rounded my-6 bg-dark text-white list-unstyled ">
+      <div class="container rounded my-6 bg-dark text-white list-unstyled  fs-2" >
         <!-- navbar here  (added bootsrap)-->
         <div class="row">
           <div class="col-sm">
             <!-- remove the dot from nav bar  -->
-            <ul class="list-unstyled" >
-            <li ><a href="#about-me" class="active text-white ">About Me</a></li>
+            <ul class="list-unstyled " >
+            <li ><a href="#about-me" class="active text-white  " >About Me</a></li>
           </div>
           <div class="col-sm">
             <li>
               <!-- how to add more work  -->
               <a
-                href="file:///Users/mahamadoukabba/Desktop/activity%2022%20git/22-Stu_Mini-Project/index.html"
+                href="https://jpmare29.github.io/project-1-group-8-columbia/"
                 class="active text-white"
                 >Work</a
               >
@@ -91,7 +91,7 @@
         <div class="col-sm-8">
           <h1>Mahamadou Kabba</h1>
           <h3>Student</h3>
-          <p>
+          <p class="fs-2 fw-bold">
             I received an Electrical Engineering Associate Degree in Applied
             Science from Bronx Community College. I'm an aspiring web developer
             currently attending Columbia Engineering Bootcamp. I was born and
@@ -111,7 +111,7 @@
     <section id="contact-form" class="row w-100 d-flex justify-content-center"> 
       <div class="col-10 col-md-6 col-lg-5"> 
         <form  class="bg-white rounded my-3 p-3">
-          <h3>contact information form!</h3>
+          <h3>contact information form</h3>
           <div class="form-group">
             <!-- <label for="name">Names</label> -->
     
